# png-decoder

./: Cargo.toml  README.md
benches/: bench_main.rs  my_benchmark.rs
benches/benchmarks/: common.rs  decode_file.rs  mod.rs  unfilter.rs
src/: chunk.rs  chunk_data.rs  color.rs  filter.rs  lib.rs  main.rs  png.rs
