[package]
name = "png-decoder"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
lazy_static = "1.3"
miniz_oxide = "0.3"

[dev-dependencies]
criterion = "0.2"
png = "0.15"

[[bench]]
name = "my_benchmark"
harness = false
